public/css/style.css
.progress.big { height: 40px; line-height: 40px; }
.progress.big .bar { font-size: 16px; }

.row-fluid .span12.main { width: 66%; }

.table th.text-right,
.table td.text-right { text-align: right; }

.table th.text-center,
.table td.text-center { text-align: center; }

.table tr.child { background-color: #f9f9f9; }

.btn.top-action { position: absolute; top: 60px; }
.btn.top-action-left { left: 20px; }
.btn.top-action-right { right: 20px; }

img.flag { opacity:0.3;height:36px; }

/* Large desktop */
/* @media (min-width: 1200px) { ... } */

/* Portrait tablet to landscape and desktop */
/* @media (min-width: 768px) and (max-width: 979px) { ... } */

/* Landscape phone to portrait tablet */
@media (max-width: 767px) {
  .row-fluid .span12.main { width: 100%; margin-left: 0px; }
}

/* Landscape phones and down */
@media (max-width: 480px) {
  .btn.top-action { top: 95px; }
}

